--- a/src/main/webapp/swagger/index.html
+++ b/src/main/webapp/swagger/index.html
@@ -22,15 +22,11 @@
   <script src='lib/marked.js' type='text/javascript'></script>
   <script src='lib/swagger-oauth.js' type='text/javascript'></script>
 
-  <!-- Some basic translations -->
-  <!-- <script src='lang/translator.js' type='text/javascript'></script> -->
-  <!-- <script src='lang/ru.js' type='text/javascript'></script> -->
-  <!-- <script src='lang/en.js' type='text/javascript'></script> -->
 
   <script type="text/javascript">
     $(function () {
       //TODO: change this in production
-      var url = "http://localhost:8080/api-docs";
+      var url = "/api-docs";
 
       // Pre load translate...
       if(window.SwaggerTranslator) {
